--- a/app/assets/styles/modules/_large-hero.css
+++ b/app/assets/styles/modules/_large-hero.css
@@ -7,19 +7,24 @@
 	}
 
 	&__text-content {
+		padding-top: 88px;
 		position: absolute;
-		top: 55%;
+		top: 50%;
 		transform: translateY(-50%);
 		left: 0;
 		width: 100%;
 		text-align: center;
+
+		@mixin atMedium {
+			padding-top: 60px;
+		}
 	}
 
 	&__title {
 		font-weight: 300;
 		color: $mainBlue;
 		margin: 0;
-		font-size: 2.4rem;
+		font-size: 2rem;
 
 		@mixin atSmall {
 			font-size: 4.8rem;
@@ -29,7 +34,7 @@
 	&__subtitle {
 		font-weight: 300;
 		color: $mainBlue;
-		font-size: 1.5rem;
+		font-size: 1.3rem;
 		margin: 0;
 
 		@mixin atSmall {
@@ -39,7 +44,7 @@
 
 	&__description {
 		color: #FFF;
-		font-size: 1.1rem;
+		font-size: 1rem;
 		font-weight: 200;
 		text-shadow: 2px 2px 0 rgba(0, 0, 0, .1);
 		max-width: 30rem;
