--- a/app/assets/styles/modules/_sprite.css
+++ b/app/assets/styles/modules/_sprite.css
@@ -2,11 +2,11 @@
 
 
 		.icon {
-			background-image: url('/assets/images/sprites/sprite-db4c90ad.svg');
+			background-image: url('../../assets/images/sprites/sprite-db4c90ad.svg');
 		}
 
 		.no-svg .icon {
-			background-image: url('/assets/images/sprites/sprite-db4c90ad.png');
+			background-image: url('../../assets/images/sprites/sprite-db4c90ad.png');
 		}
 	
 	.icon--comment {
