--- a/app/assets/styles/modules/_site-header.css
+++ b/app/assets/styles/modules/_site-header.css
@@ -69,7 +69,7 @@
 			height: 3px;
 			background-color: #FFF;
 			transform-origin: 0 0;
-			transition: tranform .3s ease-out;
+			transition: transform .3s ease-out;
 		}
 
 		&__middle {
@@ -92,7 +92,7 @@
 			height: 3px;
 			background-color: #FFF;
 			transform-origin: 0 100%;
-			transition: tranform .3s ease-out;
+			transition: transform .3s ease-out;
 		}
 
 		@mixin atMedium {
@@ -119,7 +119,7 @@
 		opacity: 0;
 		transform: scale(1.2);
 		transition: all .3s ease-out;
-		posiiton: realtive;
+		posiiton: relative;
 		z-index: -10;
 		padding-top: 90px;
 		text-align: center;
